added contact form and some short changes on site

--- a/apartmani-danijel/index.html
+++ b/apartmani-danijel/index.html
@@ -130,6 +130,59 @@
         </div>
       </div>
     </article>
+
+    <!-- contact form -->
+    <section class="formSection">
+      <form class="form">
+        <label for="fname">First name:</label><br />
+        <input
+          class="fName"
+          type="text"
+          id="fname"
+          name="fname"
+          required
+        /><br />
+        <label for="lname">Last name:</label><br />
+        <input
+          class="lName"
+          type="text"
+          id="lname"
+          name="lname"
+          required
+        /><br />
+        <label for="email">E-mail adress:</label><br />
+        <input
+          class="eMail"
+          type="text"
+          id="email"
+          name="email"
+          required
+        /><br />
+        <label for="phoneNumber">Phone Number:</label><br />
+        <input
+          class="phoneNumber"
+          type="number"
+          id="phoneNumber"
+          name="phoneNumber"
+          required
+        /><br />
+        <label for="comment">Comment:</label><br />
+        <input
+          class="comm"
+          type="text"
+          id="comment"
+          name="comment"
+          required
+        /><br />
+        <button class="submit">Submit</button>
+      </form>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <p>&copy; by Momcilo Nikolic 2023.</p>
+    </footer>
+
     <!-- bootstrap scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
