adding gap in nav

--- a/infiniti-web/index.html
+++ b/infiniti-web/index.html
@@ -8,6 +8,7 @@
     <!-- css -->
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/aside.css" />
 
     <!-- google fonts -->
     <!-- inter -->
@@ -19,7 +20,7 @@
     />
     <!-- avenir -->
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet" />
-
+    git
     <title>iInfitniti</title>
   </head>
   <body>
