I create Aside section with flex proporty

--- a/infiniti-web/index.html
+++ b/infiniti-web/index.html
@@ -20,7 +20,6 @@
     />
     <!-- avenir -->
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet" />
-    git
     <title>iInfitniti</title>
   </head>
   <body>
@@ -48,6 +47,45 @@
           <a href="#">¡Te ayudamos!</a>
         </div>
       </header>
+
+      <!-- aside sectioon -->
+      <aside class="asideSection centerContainer">
+        <div class="box1">
+          <div class="textBox1">
+            <h1>¿Qué hacemos?</h1>
+            <p>Nos encargamos de tu seguridad.</p>
+            <p>
+              Gestionamos eficientemente los programas de seguros de nuestros
+              clientes, a través de un asesoramiento profesional y según sus
+              necesidades de protección.
+            </p>
+          </div>
+          <div class="imgBox1">
+            <img class="imgBox1_2" src="/css/img=box-1.png" alt="" />
+          </div>
+        </div>
+
+        <!-- box 2 -->
+        <div class="box2">
+          <div class="imgBox2">
+            <img class="imgBox1_2" src="/css/img=box-1.png" alt="" />
+          </div>
+          <div class="textBox2">
+            <h1>¿Quiénes somos?</h1>
+            <p>
+              Somos una agencia de seguros orientada en gestionar eficientemente
+              los programas de seguros de nuestros clientes, a través de un
+              asesoramiento profesional y según sus necesidades de protección,
+              especializándonos en maximizar la atención y la correcta cobertura
+              de los riesgos.
+            </p>
+            <p>
+              Nos mueve facilitarle la vida a nuestros clientes para que puedan
+              cumplir sus sueños mientras nos nosotros aseguramos su protección.
+            </p>
+          </div>
+        </div>
+      </aside>
     </div>
   </body>
 </html>
