One img was change in Aside section

--- a/infiniti-web/index.html
+++ b/infiniti-web/index.html
@@ -68,7 +68,7 @@
         <!-- box 2 -->
         <div class="box2">
           <div class="imgBox2">
-            <img class="imgBox1_2" src="/css/img=box-1.png" alt="" />
+            <img class="imgBox1_2" src="/css/img-box-2.png" alt="" />
           </div>
           <div class="textBox2">
             <h1>¿Quiénes somos?</h1>
