make it copyright

--- a/pizzeria-home-page/index.html
+++ b/pizzeria-home-page/index.html
@@ -72,6 +72,9 @@
           consequatur?
         </p>
       </div>
+
+      <!-- footer -->
+      <footer>Copyright &copy; by Momcilo Nikolic 2023.</footer>
     </div>
 
     <!-- icons scripts -->
