created diferencia section with 3 card png icon, h2 and empty objects

--- a/infiniti-web/index.html
+++ b/infiniti-web/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/aside.css" />
+    <link rel="stylesheet" href="/css/diferencia.css" />
 
     <!-- google fonts -->
     <!-- inter -->
@@ -52,7 +53,7 @@
       <aside class="asideSection centerContainer">
         <div class="box1">
           <div class="textBox1">
-            <h1>¿Qué hacemos?</h1>
+            <h2>¿Qué hacemos?</h2>
             <p>Nos encargamos de tu seguridad.</p>
             <p>
               Gestionamos eficientemente los programas de seguros de nuestros
@@ -71,7 +72,7 @@
             <img class="imgBox1_2" src="/css/img-box-2.png" alt="" />
           </div>
           <div class="textBox2">
-            <h1>¿Quiénes somos?</h1>
+            <h2>¿Quiénes somos?</h2>
             <p>
               Somos una agencia de seguros orientada en gestionar eficientemente
               los programas de seguros de nuestros clientes, a través de un
@@ -86,6 +87,60 @@
           </div>
         </div>
       </aside>
+
+      <!-- diferencia section -->
+      <section class="diferencia centerContainer">
+        <h2>¿Qué nos diferencia?</h2>
+
+        <!-- card box -->
+        <div class="diferencia__cardBox">
+          <div class="diferencia__cardBox_card">
+            <img
+              class="diferencia__cardBox_icon"
+              src="/css/card-icon.png"
+              alt=""
+            />
+            <h2>
+              Cercanía y <br />
+              Acompañamiento
+            </h2>
+          </div>
+          <div class="diferencia__cardBox_card">
+            <img
+              class="diferencia__cardBox_icon"
+              src="/css/card-icon.png"
+              alt=""
+            />
+            <h2>
+              Cercanía y <br />
+              Acompañamiento
+            </h2>
+          </div>
+          <div class="diferencia__cardBox_card">
+            <img
+              class="diferencia__cardBox_icon"
+              src="/css/card-icon.png"
+              alt=""
+            />
+            <h2>
+              Cercanía y <br />
+              Acompañamiento
+            </h2>
+          </div>
+        </div>
+        <div class="diferencia__cardBoxCard__emptyObject1"></div>
+        <div class="diferencia__cardBoxCard__emptyObject2"></div>
+        <div class="diferencia__cardBoxCard__emptyObject3"></div>
+        <div class="diferencia__cardBoxCard__emptyObject4"></div>
+        <div class="diferencia__cardBoxCard__emptyObject5"></div>
+        <div class="diferencia__cardBoxCard__emptyObject6"></div>
+        <div class="diferencia__cardBoxCard__emptyObject7"></div>
+        <div class="diferencia__cardBoxCard__emptyObject8"></div>
+        <div class="diferencia__cardBoxCard__emptyObject9"></div>
+        <div class="diferencia__cardBoxCard__emptyObject10"></div>
+        <div class="diferencia__cardBoxCard__emptyObject11"></div>
+        <div class="diferencia__cardBoxCard__emptyObject12"></div>
+      </section>
     </div>
   </body>
 </html>
