create nuestro section

--- a/infiniti-web/index.html
+++ b/infiniti-web/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/aside.css" />
     <link rel="stylesheet" href="/css/diferencia.css" />
+    <link rel="stylesheet" href="/css/nuestre.css" />
 
     <!-- google fonts -->
     <!-- inter -->
@@ -141,6 +142,28 @@
         <div class="diferencia__cardBoxCard__emptyObject11"></div>
         <div class="diferencia__cardBoxCard__emptyObject12"></div>
       </section>
+
+      <!-- Nuestro ADN section -->
+      <div class="nuestreMdnSection centerContainer">
+        <div class="nuestreMdnSectionHeading">
+          <h2>Nuestro ADN</h2>
+        </div>
+        <div class="nuestreMdnSectionContetn">
+          <div class="nuestreMdnSectionContetn_text">
+            <p>
+              Nos genera satisfacción y felicidad saber que logramos encontrarle
+              la solución a los problemas del otro, logramos cambiarle la vida
+              positivamente a las personas.
+            </p>
+            <p>
+              En nuestra relación con los clientes tratamos que se les contagie
+              nuestro ADN, nuestra razón de ser que nos mueve, nos inspira y nos
+              abre puertas para transformar la vida de los demás.
+            </p>
+          </div>
+          <img src="/css/Group 33618.png" alt="" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
