change background and fonts color family also

--- a/Caffee bar boss prices /index.html
+++ b/Caffee bar boss prices /index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/index.css" />
     <title>Caffee Bar Boss</title>
   </head>
@@ -252,7 +257,7 @@
               <td>8,00</td>
             </tr>
             <tr>
-              <td>prirodni sok</td>
+              <td>Sok prirodni</td>
               <td>0,20 l</td>
               <td>1,99</td>
               <td>15,00</td>
