Ending a pricing list for caffee bar

--- a/Caffee bar boss prices /index.html
+++ b/Caffee bar boss prices /index.html
@@ -163,9 +163,6 @@
               <td></td>
               <td></td>
             </tr>
-          
-
-          
             <tr>
               <td>Coca Cola</td>
               <td>0,25 l</td>
@@ -269,6 +266,227 @@
         <p>Cijene su izražen u eurima po fiksnom tečaju konverzije 1&euro; = 7,53450 kn</p>
       </div>
     </div>
+    </main>
+
+
+    <!-- zadnja strana cijenika -->
+        <main>
+            <div class="tableHolder">
+            <table class="table">
+              <tbody class="tbody">
+                <!-- pivo -->
+                <tr>
+                  <th class="drinksName">Piva</th>
+                </tr>
+                <tr>
+                  <td>Karlovačko</td>
+                  <td>0,33 l</td>
+                  <td>1,72</td>
+                  <td>13,00</td>
+                </tr>
+                <tr>
+                  <td>Karlovačko</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Ožujsko</td>
+                  <td>0,33 l</td>
+                  <td>1,72</td>
+                  <td>13,00</td>
+                </tr>
+                <tr>
+                  <td>Ožujsko</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Favorit</td>
+                  <td>0,33 l</td>
+                  <td>1,72</td>
+                  <td>13,00</td>
+                </tr>
+                <tr>
+                  <td>Favorit</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Laško</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Nikšićko</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Staropramen</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Ožujsko cool</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Ožujsko radler</td>
+                  <td>0,50 l</td>
+                  <td>1,85</td>
+                  <td>14,00</td>
+                </tr>
+                <tr>
+                  <td>Crno pivo</td>
+                  <td>0,50 l</td>
+                  <td>1,99</td>
+                  <td>15,00</td>
+                </tr>
+                <tr>
+                  <td>Strano pivo</td>
+                  <td>0,50 l</td>
+                  <td>2,25</td>
+                  <td>17,00</td>
+                </tr>
+
+                <!-- alkoholna pica -->
+                <tr>
+                  <th class="drinksName">Alkoholna pića</th>
+                </tr>
+                <tr>
+                  <td>Stock</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Šljivovica</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Pepito</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Pelinkovac Amaro</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Vodtka</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Konjak</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Travarica</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Cynar</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>rum</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Medenica</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Biska</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Borovniček</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+                <tr>
+                  <td>Rakija</td>
+                  <td>0,03 l</td>
+                  <td>1,06</td>
+                  <td>8,00</td>
+                </tr>
+
+                <!-- vian -->
+                  <tr>
+                    <th class="drinksName">Vina</th>
+                  </tr>
+                  <tr>
+                    <td>Vino Bijelo</td>
+                    <td>0,10 l</td>
+                    <td>0,66</td>
+                    <td>5,00</td>
+                  </tr>
+                  <tr>
+                    <td>Vino Bijelo</td>
+                    <td>0,20 l</td>
+                    <td>1,32</td>
+                    <td>10,00</td>
+                  </tr>
+                  <tr>
+                    <td>Vino Cro</td>
+                    <td>0,10 l</td>
+                    <td>0,66</td>
+                    <td>5,00</td>
+                  </tr>
+                  <tr>
+                    <td>Vino Crno</td>
+                    <td>0,20 l</td>
+                    <td>1,32</td>
+                    <td>10,00</td>
+                  </tr>
+                  <tr>
+                    <td>Gemišt</td>
+                    <td>0,20 l</td>
+                    <td>1,19</td>
+                    <td>9,00</td>
+                  </tr>
+                  <tr>
+                    <td>Bevanda</td>
+                    <td>0,20 l</td>
+                    <td>0,66</td>
+                    <td>8,00</td>
+                  </tr>
+              </tbody>
+            </table>
+
+            <div class="eConversion ">
+              <p>Knjiga Žalbe nalazi se na šanku <br> Osobama mlađima od 18 godina ne točimo alkoholna pića <br> Objekat nije u sustavu PDV-a</p>
+            </div>
+          </div>
     </main>
   </body>
 </html>
