--- a/apartmani-danijel/index.html
+++ b/apartmani-danijel/index.html
@@ -1,207 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="Avelible apartmans in Premantura, Pula, Croatia is ready for you."
+    />
+    <meta
+      name="keywords"
+      content="Apartman, Apartmans, Rent, Avelible, Premantura, Pula, istria, Croatia,"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- exterminal css files -->
-    <link rel="stylesheet" href="./css/style.css" />
-    <!-- bootstrap links -->
+
+    <!-- boostrap css -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <!-- google fonts link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
 
-    <title>apartmani Daniejl</title>
+    <!-- my css -->
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Apartmani Danijel Premantura</title>
   </head>
   <body>
-    <!-- header and nav bar -->
-    <header class="mainHeader">
-      <div class="logo">
-        <p>Apartmani<span>Danijel</span></p>
-      </div>
-      <nav class="mainNav">
-        <a href="#">Home</a>
-        <a href="#">Apartmans</a>
-        <a href="#">Check awelibles apartman</a>
-        <a href="#"><ion-icon name="call-outline"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-      </nav>
-    </header>
-
-    <!-- hero section -->
-    <section class="hero">
-      <div class="premantura">
-        <!-- this div have backgorund image -->
-      </div>
-      <div class="premanturaTextBox">
-        <div class="nameOfApartmans">
-          <h1>apartmani Danijel</h1>
+    <nav
+      class="navbar navbar-expand-lg navbar-inverse navbar-static-top bg-dark-subtle mb-5"
+    >
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse d-flex justify-content-center align-items-center link-dark text-uppercase"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#apartmans">Apartmans</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contactUs">Contact Us</a>
+            </li>
+          </ul>
         </div>
-        <p>
-          Nalazimo se u prelijepom priobalju sa mnostvo prelijepih stvari i puno
-          sadrzaja kako za djecu, tako i za tinedjere, a i stariju ekipu.
+      </div>
+    </nav>
+
+    <div class="container d-flex mb-5 aboutSection">
+      <div class="map">
+        <a href="#"
+          ><iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45306.25159659133!2d13.878439417736653!3d44.78812939396276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47632bc9960f6cad%3A0x398eeeae814dda8f!2sPremantura!5e0!3m2!1shr!2shr!4v1681913525734!5m2!1shr!2shr"
+            class="mapAddress"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe
+        ></a>
+      </div>
+      <div class="textBox text-center bg-secondary-subtle p-5">
+        <h2>About Premantura</h2>
+        <p class="text-start">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae
+          voluptates consectetur dicta dolorum reprehenderit eos sunt eaque hic
+          sed doloribus amet ab reiciendis, soluta necessitatibus ipsam eum
+          debitis obcaecati minus assumenda, itaque totam, harum enim libero!
+          Atque labore nobis nemo mollitia aspernatur repudiandae porro
+          laboriosam. Culpa, recusandae a eligendi explicabo totam incidunt
+          magnam corporis voluptas rerum hic sed ab veritatis maiores, dolore
+          nobis sapiente perspiciatis alias nihil ducimus sit facere et eveniet
+          nesciunt ipsam. Voluptates sint ratione doloribus ipsum nobis.
+          Perspiciatis sit, placeat autem in aut praesentium nostrum voluptas,
+          sequi numquam aspernatur a ea porro, possimus velit sed rerum
+          molestiae?
         </p>
-        <div class="contentOffer">
-          <a href="#"><ion-icon name="bed-outline"></ion-icon></a>
-          <a href="#"><ion-icon name="restaurant-outline"></ion-icon></a>
-          <a href="#"><ion-icon name="bus-outline"></ion-icon></a>
+        <button class="btn btn-danger">
+          <a href="#" class="link text-decoration-none text-white">Read more</a>
+        </button>
+      </div>
+    </div>
+
+    <section id="apartmans" class="apartmaniDanijel text-center mb-5">
+      <h1 class="text-uppercase fst-italic mb-5">Apartmani Danijel</h1>
+
+      <div
+        class="cardsApartman d-flex gap-5 justify-content-center align-items-center"
+      >
+        <div class="card" style="width: 18rem">
+          <img
+            src="css/apartman.jpg"
+            class="card-img-top"
+            alt="Apartman picture on the screen"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Apartman 1</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Rent</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="css/apartman.jpg"
+            class="card-img-top"
+            alt="Apartman pictures on the screen"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Apartman 2</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Rent</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="css/apartman.jpg"
+            class="card-img-top"
+            alt="Apartman pictures on the screen"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Rent</a>
+          </div>
         </div>
       </div>
     </section>
 
-    <article class="apartmanCard">
-      <!-- apartman 1 -->
-      <div class="card">
-        <img
-          class="apartmanImg"
-          src="./css/apartman.jpg"
-          alt="Outside front of apartman on the screen"
+    <section id="contactUs" class="contactform bg-dark-subtle">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Email address</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="name@example.com"
         />
-        <h4 class="apartmanNumber">Apartman 1</h4>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="wifi-outline"></ion-icon> Free Wifi
-        </p>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="car-outline"></ion-icon> Fre Parking
-        </p>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="tv-outline"></ion-icon> Free TV world
-          chanals
-        </p>
-        <div class="btn">
-          <a href="#">Check Avelible</a>
-        </div>
       </div>
-
-      <!-- apartman 2 -->
-      <div class="card">
-        <img
-          class="apartmanImg"
-          src="./css/apartman.jpg"
-          alt="Outside front of apartman on the screen"
-        />
-        <h4 class="apartmanNumber">Apartman 1</h4>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="wifi-outline"></ion-icon> Free Wifi
-        </p>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="car-outline"></ion-icon> Fre Parking
-        </p>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="tv-outline"></ion-icon> Free TV world
-          chanals
-        </p>
-        <div class="btn">
-          <a href="#">Check Avelible</a>
-        </div>
-      </div>
-
-      <!-- aprtman 3 -->
-      <div class="card">
-        <img
-          class="apartmanImg"
-          src="./css/apartman.jpg"
-          alt="Outside front of apartman on the screen"
-        />
-        <h4 class="apartmanNumber">Apartman 1</h4>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="wifi-outline"></ion-icon> Free Wifi
-        </p>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="car-outline"></ion-icon> Fre Parking
-        </p>
-        <p class="apartmanFree">
-          <ion-icon class="freeItem" name="tv-outline"></ion-icon> Free TV world
-          chanals
-        </p>
-        <div class="btn">
-          <a href="#">Check Avelible</a>
-        </div>
-      </div>
-    </article>
-
-    <!-- contact form -->
-    <section class="formSection">
-      <form class="form">
-        <label for="fname">First name:</label><br />
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Phon Number</label
+        >
         <input
-          class="fName"
-          type="text"
-          id="fname"
-          name="fname"
-          required
-        /><br />
-        <label for="lname">Last name:</label><br />
-        <input
-          class="lName"
-          type="text"
-          id="lname"
-          name="lname"
-          required
-        /><br />
-        <label for="email">E-mail adress:</label><br />
-        <input
-          class="eMail"
-          type="text"
-          id="email"
-          name="email"
-          required
-        /><br />
-        <label for="phoneNumber">Phone Number:</label><br />
-        <input
-          class="phoneNumber"
           type="number"
-          id="phoneNumber"
-          name="phoneNumber"
-          required
-        /><br />
-        <label for="comment">Comment:</label><br />
-        <input
-          class="comm"
-          type="text"
-          id="comment"
-          name="comment"
-          required
-        /><br />
-        <button class="submit">Submit</button>
-      </form>
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="+/your phone number"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label"
+          >Example textarea</label
+        >
+        <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="3"
+        ></textarea>
+        <div class="d-flex justify-content-center align-items-center p-3">
+          <button class="btn btn-primary">Submit</button>
+        </div>
+      </div>
     </section>
 
-    <!-- footer -->
-    <footer>
-      <p>&copy; by Momcilo Nikolic 2023.</p>
-    </footer>
+    <section class="aboutUs">
+      <h2
+        class="text-danger text-center text-uppercase fst-italic fw-bold mb-3"
+      >
+        About us
+      </h2>
+      <div class="container mb-5">
+        <div class="aboutContent d-flex gap-3">
+          <p class="w-50">
+            Apartmani Danijel nalaze se na idealnoj lokaciji kako sa mlade, tako
+            i za starrije. Sadrzaja sigurno nede nedostajati. Nalazioo se u
+            Premanturi, svega 10km od centra Grada Pule. Partmani su u blizini
+            plaze, kafica, restorana, zabavnog sadrzaja (tranpolini i slicno...)
+          </p>
+          <div class="w-50 text-center iconsAbout">
+            <h3>U sklopu apartmana</h3>
+            <div
+              class="aboutIconFlex d-flex gap-3 justify-content-center align-items-center"
+            >
+              <i class="bi bi-p-circle display-1"></i>
+              <i class="bi bi-wifi display-1"></i>
+              <i class="bi bi-tv display-1"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <!-- bootstrap scripts -->
+    <footer class="text-center bg-secondary-subtle text-dark">
+      <p>&copy; Momcilo Nikolic 2023.</p>
+    </footer>
+    <!-- boostrap js scripts -->
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+      integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
-      integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+      integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
       crossorigin="anonymous"
-    ></script>
-    <!-- icons script -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
   </body>
 </html>
