updating section and icons, fix responsive

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -231,9 +231,27 @@
           <div
             class="socialmeida container d-flex justify-content-center align-items-center gap-5"
           >
-            <i class="fa-brands fa-facebook mediaIcon"></i>
-            <i class="fa-brands fa-square-instagram mediaIcon"></i>
-            <i class="fa-brands fa-linkedin mediaIcon"></i>
+            <a
+              href="https://www.facebook.com/momcilo.nikolic.796"
+              target="_blank"
+            >
+              <i class="fa-brands fa-facebook mediaIcon"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/moco.nikolic/?hl=hr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-square-instagram mediaIcon"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/?originalSubdomain=hr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin mediaIcon"></i>
+            </a>
+            <a href="https://github.com/Moco23" target="_blank">
+              <i class="fa-brands fa-github mediaIcon"></i>
+            </a>
             <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
             <i class="fa-solid fa-envelope mediaIcon"></i>
           </div>
@@ -241,109 +259,69 @@
       </section>
       <!-- my projects section -->
 
-      <!-- testimonials -->
-      <section class="testimonialsSection mainBg_color p-5">
-        <h2 class="secondaryHeading text-center mb-5">Testimoinals</h2>
-
-        <div class="container">
-          <div class="row mb-5">
-            <!-- profil 1 -->
-            <div class="col-md-6">
-              <div
-                class="testimonialsSection_profile_1 d-flex gap-5 align-items-center"
-              >
-                <div class="testimonials_provile_1__imgBox">
-                  <img
-                    src="css/imgs/profilna-1.jpeg"
-                    alt="mark wheter on the screen"
-                    class="testimonialsSection_profile_imgs"
-                  />
-                </div>
-                <div class="testimonials_provile_1__textBox text-end">
-                  <p class="mainText_color w-75 recomendationOfPoople">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolor totam, culpa, sed quae est neque at pariatur alias
-                    ullam repellat accusamus. Autem, explicabo! Tempore iste,
-                    velit atque provident minus quaerat.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <!-- profil 2 -->
-            <div class="col-md-6">
-              <div
-                class="testimonialsSection_profile_1 d-flex gap-5 align-items-center"
-              >
-                <div class="testimonials_provile_1__imgBox">
-                  <img
-                    src="css/imgs/profilna-1.jpeg"
-                    alt="mark wheter on the screen"
-                    class="testimonialsSection_profile_imgs"
-                  />
-                </div>
-                <div class="testimonials_provile_1__textBox text-end">
-                  <p class="mainText_color w-75 recomendationOfPoople">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolor totam, culpa, sed quae est neque at pariatur alias
-                    ullam repellat accusamus. Autem, explicabo! Tempore iste,
-                    velit atque provident minus quaerat.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
+      <!-- chouse me section -->
+      <section class="chouseMeSection">
+        <div class="container-fluid mainBg_color p-5">
+          <h2 class="secondaryHeading text-center mb-5">
+            Why you should chouse me?
+          </h2>
           <div class="row">
-            <!-- profil 3 -->
-            <div class="col-md-6">
+            <div
+              class="col-12 d-flex justify-content-center gap-5 chouseMeSection_icons_respColumn"
+            >
               <div
-                class="testimonialsSection_profile_1 d-flex gap-5 align-items-center"
+                class="html d-flex flex-column justify-content-center align-items-center"
               >
-                <div class="testimonials_provile_1__imgBox">
-                  <img
-                    src="css/imgs/profilna-1.jpeg"
-                    alt="mark wheter on the screen"
-                    class="testimonialsSection_profile_imgs"
-                  />
-                </div>
-                <div class="testimonials_provile_1__textBox text-end">
-                  <p class="mainText_color w-75 recomendationOfPoople">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolor totam, culpa, sed quae est neque at pariatur alias
-                    ullam repellat accusamus. Autem, explicabo! Tempore iste,
-                    velit atque provident minus quaerat.
-                  </p>
-                </div>
+                <i
+                  class="fa-brands fa-html5 chouseMeSection_icon mainText_color chouseMeSection_htmlIcon"
+                ></i>
+                <h2 class="mainText_color chousMeSection_level">Expert</h2>
               </div>
-            </div>
 
-            <!-- profil 4 -->
-            <div class="col-md-6">
               <div
-                class="testimonialsSection_profile_1 d-flex gap-5 align-items-center"
+                class="css d-flex flex-column justify-content-center align-items-center"
               >
-                <div class="testimonials_provile_1__imgBox">
-                  <img
-                    src="css/imgs/profilna-1.jpeg"
-                    alt="mark wheter on the screen"
-                    class="testimonialsSection_profile_imgs"
-                  />
-                </div>
-                <div class="testimonials_provile_1__textBox text-end">
-                  <p class="mainText_color w-75 recomendationOfPoople">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolor totam, culpa, sed quae est neque at pariatur alias
-                    ullam repellat accusamus. Autem, explicabo! Tempore iste,
-                    velit atque provident minus quaerat.
-                  </p>
-                </div>
+                <i
+                  class="fa-brands fa-css3-alt chouseMeSection_icon mainText_color chouseMeSection_cssIcon"
+                ></i>
+                <h2 class="mainText_color chousMeSection_level">Expert</h2>
+              </div>
+
+              <div
+                class="bootstrap d-flex flex-column justify-content-center align-items-center"
+              >
+                <i
+                  class="fa-brands fa-bootstrap chouseMeSection_icon mainText_color chouseMeSection_bsIcon"
+                ></i>
+                <h2 class="mainText_color chousMeSection_level">Expert</h2>
+              </div>
+
+              <div
+                class="sass d-flex flex-column justify-content-center align-items-center"
+              >
+                <i
+                  class="fa-brands fa-sass chouseMeSection_icon mainText_color chouseMeSection_sassIcon"
+                ></i>
+                <h2 class="mainText_color chousMeSection_level">
+                  Intermediate
+                </h2>
+              </div>
+
+              <div
+                class="js d-flex flex-column justify-content-center align-items-center"
+              >
+                <i
+                  class="fa-brands fa-js chouseMeSection_icon mainText_color chouseMeSection_jsIcon"
+                ></i>
+                <h2 class="mainText_color chousMeSection_level">
+                  Intermediate
+                </h2>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- testimonials -->
+      <!-- chouse me section -->
 
       <!-- technologi section -->
       <section class="technologiSection">
@@ -586,9 +564,27 @@
               id="contactMe"
             >
               <h4 class="mainText_color">Find me here &rarr;</h4>
-              <i class="fa-brands fa-facebook mediaIconFooter"></i>
-              <i class="fa-brands fa-square-instagram mediaIconFooter"></i>
-              <i class="fa-brands fa-linkedin mediaIconFooter"></i>
+              <a
+                href="https://www.facebook.com/momcilo.nikolic.796/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-facebook mediaIconFooter"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/moco.nikolic/?hl=hr"
+                target="_blank"
+              >
+                <i class="fa-brands fa-square-instagram mediaIconFooter"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin mediaIconFooter"></i>
+              </a>
+              <a href="https://github.com/Moco23" target="_blank">
+                <i class="fa-brands fa-github mediaIconFooter"></i>
+              </a>
               <i class="fa-brands fa-square-whatsapp mediaIconFooter"></i>
               <i class="fa-solid fa-envelope mediaIconFooter"></i>
             </div>
