--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -114,7 +114,9 @@
           <div class="row">
             <div class="col-12 col-md-12 col-lg-6">
               <h1 class="mainHeading text-center p-5">Momcilo Nikolic</h1>
-              <h2 class="developerDescrption mainText_color text-end">
+              <h2
+                class="developerDescrption mainText_color text-center text-md-end p-md-5"
+              >
                 my name is
                 <span class="secondaryText_color">Momcilo Nikolic</span>. I
                 offer a service as a
@@ -132,7 +134,7 @@
                 <span class="secondaryText_color">JS</span>
               </h2>
 
-              <div class="contactMe d-flex justify-content-end">
+              <div class="contactMe d-flex justify-content-center text-md-end">
                 <a
                   href="#contactMe"
                   class="contactMe_btn d-inline-block d-flex-justify-content-center align-items-center"
@@ -223,7 +225,7 @@
           <!-- slider -->
 
           <span
-            class="secondaryHeading d-flex justify-content-center align-items-center mb-5"
+            class="secondaryHeading d-flex justify-content-center align-items-center mb-5 mediaSpan"
           >
             If need website you can contact me.
           </span>
@@ -554,7 +556,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <footer class="mainBg_color p-5 d-flex justify-content-evenly">
+          <footer class="mainBg_color p-5 d-flex justify-content-evenly footer">
             <h4 class="mainText_color w-100">
               Copyright &copy;2023. All rights reserved by Momcilo Nikolic
             </h4>
