working on responsive

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -115,7 +115,7 @@
             <div class="col-12 col-md-12 col-lg-6">
               <h1 class="mainHeading text-center p-5">Momcilo Nikolic</h1>
               <h2
-                class="developerDescrption mainText_color text-center text-md-end p-md-5"
+                class="developerDescrption mainText_color text-center text-md-end p-md-5 p-5"
               >
                 my name is
                 <span class="secondaryText_color">Momcilo Nikolic</span>. I
@@ -340,7 +340,9 @@
             <div
               class="col-md-6 d-flex justify-content-start align-items-center p-5"
             >
-              <h3 class="mainText_color">
+              <h3
+                class="mainText_color text-md-start text-sm-center text-center p-md-0 p-sm-5 p-5"
+              >
                 HyperText Markup Language (HTML) is the basic scripting language
                 used by web browsers to render pages on the world wide web.
                 HyperText allows a user to click a link and be redirected to a
@@ -358,7 +360,9 @@
             <div
               class="col-md-6 d-flex justify-content-start align-items-center p-5"
             >
-              <h3 class="mainText_color">
+              <h3
+                class="mainText_color text-md-start text-sm-center text-center p-md-0 p-sm-5 p-5"
+              >
                 Cascading Style Sheets (CSS) is a stylesheet language used to
                 describe the presentation of a document written in HTML or XML
                 (including XML dialects such as SVG, MathML or XHTML). CSS
@@ -377,7 +381,9 @@
             <div
               class="col-md-6 d-flex justify-content-start align-items-center p-5"
             >
-              <h3 class="mainText_color">
+              <h3
+                class="mainText_color text-md-start text-sm-center text-center p-md-0 p-sm-5 p-5"
+              >
                 Short for Syntactically Awesome Style Sheets, SASS is a popular
                 CSS pre-processor. SASS code is processed by the program and
                 compiled into CSS code, which can be used to style HTML
@@ -396,7 +402,9 @@
             <div
               class="col-md-6 d-flex justify-content-start align-items-center p-5"
             >
-              <h3 class="mainText_color">
+              <h3
+                class="mainText_color text-md-start text-sm-center text-center p-md-0 p-sm-5 p-5"
+              >
                 Bootstrap is a free, open source front-end development framework
                 for the creation of websites and web apps. Designed to enable
                 responsive development of mobile-first websites, Bootstrap
@@ -414,7 +422,9 @@
             <div
               class="col-md-6 d-flex justify-content-start align-items-center p-5"
             >
-              <h3 class="mainText_color">
+              <h3
+                class="mainText_color text-md-start text-sm-center text-center p-md-0 p-sm-5 p-5"
+              >
                 JavaScript is a scripting language that enables you to create
                 dynamically updating content, control multimedia, animate
                 images, and pretty much everything else.
@@ -429,15 +439,19 @@
       <section class="pricingSection">
         <div class="container p-5">
           <h2 class="secondaryHeading text-center mb-5">Pricing</h2>
-          <div class="row justify-content-between">
+          <div class="row justify-content-between pricingCards_row">
             <!-- card 1 -->
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-12 col-12">
               <div class="pricingCard mainBg_color p-5">
                 <h2
                   id="baisic"
                   class="secondaryHeading text-center mb-5 text-uppercase"
                 >
                   Baisic
+                </h2>
+
+                <h2 class="text-center text-warning mb-5">
+                  Deliver in max 3-4 days
                 </h2>
 
                 <ul>
@@ -460,13 +474,17 @@
             </div>
 
             <!-- card 2 -->
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-12 col-12">
               <div class="pricingCard mainBg_color p-5">
                 <h2
                   id="medium"
                   class="secondaryHeading text-center mb-5 text-uppercase"
                 >
                   Medium
+                </h2>
+
+                <h2 class="text-center text-warning mb-5">
+                  Deliver in 20 days
                 </h2>
 
                 <ul>
@@ -499,13 +517,16 @@
             </div>
 
             <!-- card 3 -->
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-12 col-12">
               <div class="pricingCard mainBg_color p-5">
                 <h2
                   id="premium"
                   class="secondaryHeading text-center mb-5 text-uppercase"
                 >
                   Premium
+                </h2>
+                <h2 class="text-center text-warning mb-5">
+                  Deliver in 30 days
                 </h2>
 
                 <ul>
